--- a/Xgboost.ipynb
+++ b/Xgboost.ipynb
@@ -218,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open ('xgbresults', 'w') as f:\n",
